Switched to using MongoDB-generated ids
