# services/integration-content-repository/app/api/swagger/swagger.json
@@ -153,9 +153,6 @@
                 }
               }
             }
-          },
-          "409": {
-            "description": "Flow with this oihid already exists, oihid must be unique"
           }
         },
         "requestBody": {
@@ -171,7 +168,7 @@
         }
       }
     },
-    "/flows/{oihid}": {
+    "/flows/{id}": {
       "get": {
         "x-swagger-router-controller": "flow",
         "security": [
@@ -189,7 +186,7 @@
         "operationId": "getFlowById",
         "parameters": [
           {
-            "name": "oihid",
+            "name": "id",
             "in": "path",
             "description": "ID of flow to return",
             "required": true,
@@ -211,7 +208,7 @@
             }
           },
           "404": {
-            "description": "No Flow with this oihid was found."
+            "description": "No Flow with this id was found."
           }
         }
       },
@@ -232,7 +229,7 @@
         "operationId": "deleteFlow",
         "parameters": [
           {
-            "name": "oihid",
+            "name": "id",
             "in": "path",
             "description": "Flow id to delete",
             "required": true,
@@ -250,7 +247,7 @@
             "description": "Invalid ID supplied"
           },
           "404": {
-            "description": "No Flow with this oihid was found."
+            "description": "No Flow with this id was found."
           }
         }
       },
@@ -268,7 +265,7 @@
         ],
         "parameters": [
           {
-            "name": "oihid",
+            "name": "id",
             "in": "path",
             "description": "ID of flow to update",
             "required": true,
@@ -279,7 +276,7 @@
           }
         ],
         "summary": "Update an existing flow",
-        "description": "The oihid is used to match the existing Flow that will be updated. Note that missing fields in the input will overwrite existing fields with null. The current version and version history is updated automatically.",
+        "description": "The id is used to match the existing Flow that will be updated.",
         "operationId": "updateFlow",
         "responses": {
           "200": {
@@ -465,13 +462,13 @@
           {
             "type": "object",
             "required": [
-              "oihid",
+              "id",
               "status",
               "createdAt",
               "updatedAt"
             ],
             "properties": {
-              "oihid": {
+              "id": {
                 "type": "string"
               },
               "status": {
